{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 175,
  "lineage": "74b2fe1f-82f8-83ee-8c07-990d01553c5f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:internet-gateway/igw-061e3d9aaeb6fe7de",
            "id": "igw-061e3d9aaeb6fe7de",
            "owner_id": "603825719481",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-00324a5ba6219a9aa"
          },
          "dependencies": [
            "aws_vpc.polly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "polly_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:loadbalancer/app/polly-alb/1dcc4f06e139b3a0",
            "arn_suffix": "app/polly-alb/1dcc4f06e139b3a0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "polly-alb-699027000.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:loadbalancer/app/polly-alb/1dcc4f06e139b3a0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "polly-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0717b78258d553527"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-043cea120efffd07a"
              },
              {
                "subnet_id": "subnet-09bcc8c86b1ca9444"
              }
            ],
            "subnets": [
              "subnet-043cea120efffd07a",
              "subnet-09bcc8c86b1ca9444"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-00324a5ba6219a9aa",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.polly_lb_sg",
            "aws_subnet.polly_subnet_a",
            "aws_subnet.polly_subnet_b",
            "aws_vpc.polly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:listener/app/polly-alb/1dcc4f06e139b3a0/2d7b868b104687b7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:targetgroup/polly-tg/a3168bfd7bf45993",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:listener/app/polly-alb/1dcc4f06e139b3a0/2d7b868b104687b7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:loadbalancer/app/polly-alb/1dcc4f06e139b3a0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.polly_alb",
            "aws_lb_target_group.polly_tg",
            "aws_security_group.polly_lb_sg",
            "aws_subnet.polly_subnet_a",
            "aws_subnet.polly_subnet_b",
            "aws_vpc.polly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "polly_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:targetgroup/polly-tg/a3168bfd7bf45993",
            "arn_suffix": "targetgroup/polly-tg/a3168bfd7bf45993",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:targetgroup/polly-tg/a3168bfd7bf45993",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "polly-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00324a5ba6219a9aa"
          },
          "dependencies": [
            "aws_lb.polly_alb",
            "aws_security_group.polly_lb_sg",
            "aws_subnet.polly_subnet_a",
            "aws_subnet.polly_subnet_b",
            "aws_vpc.polly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:route-table/rtb-06903b12157bca699",
            "id": "rtb-06903b12157bca699",
            "owner_id": "603825719481",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-061e3d9aaeb6fe7de",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00324a5ba6219a9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.polly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e402d787d5cc960f",
            "route_table_id": "rtb-06903b12157bca699",
            "subnet_id": "subnet-09bcc8c86b1ca9444"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.polly_subnet_a",
            "aws_vpc.polly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce982412c159f204",
            "route_table_id": "rtb-06903b12157bca699",
            "subnet_id": "subnet-043cea120efffd07a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.polly_subnet_b",
            "aws_vpc.polly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "polly_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:security-group/sg-0717b78258d553527",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0717b78258d553527",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "polly-lb-sg",
            "name_prefix": "",
            "owner_id": "603825719481",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00324a5ba6219a9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.polly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "polly_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:security-group/sg-0b93cd8936e5783b4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b93cd8936e5783b4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0717b78258d553527"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "polly-service-sg",
            "name_prefix": "",
            "owner_id": "603825719481",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00324a5ba6219a9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.polly_lb_sg",
            "aws_vpc.polly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "polly_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:subnet/subnet-09bcc8c86b1ca9444",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bcc8c86b1ca9444",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "603825719481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main",
              "Visibility": "Public"
            },
            "tags_all": {
              "Name": "Main",
              "Visibility": "Public"
            },
            "vpc_id": "vpc-00324a5ba6219a9aa"
          },
          "dependencies": [
            "aws_vpc.polly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "polly_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:subnet/subnet-043cea120efffd07a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043cea120efffd07a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "603825719481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main",
              "Visibility": "Public"
            },
            "tags_all": {
              "Name": "Main",
              "Visibility": "Public"
            },
            "vpc_id": "vpc-00324a5ba6219a9aa"
          },
          "dependencies": [
            "aws_vpc.polly_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "polly_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:vpc/vpc-00324a5ba6219a9aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f29b38b6ded0732c",
            "default_route_table_id": "rtb-0c04422c1d36a55ca",
            "default_security_group_id": "sg-0de15b3409c2bdece",
            "dhcp_options_id": "dopt-da350cbc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00324a5ba6219a9aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c04422c1d36a55ca",
            "owner_id": "603825719481",
            "tags": {
              "Name": "main-polly-vpc"
            },
            "tags_all": {
              "Name": "main-polly-vpc"
            }
          }
        }
      ]
    }
  ]
}